--- a/kwcag2.2-converted.html
+++ b/kwcag2.2-converted.html
@@ -2182,7 +2182,6 @@
 	</p>
 	<p>웹 접근성 국제표준(WCAG 2.1) 지표 설명
 	</p>
-	<p>이 설명은 이 표준의 인용표준을 요약한 것으로 표준의 일부는 아니다.
 	</p>
 	<table>
 		<tbody>
@@ -2380,23 +2379,7 @@
 					</ul>
 					<p>예) 비디오에서 오디오가 나오지 않는 사이사이에, 오디오 해설 삽입
 					</p>
-					<p>※ “1.2.3 오디오 해설 또는 미디어 대체수단 (사전 녹음된)”에서 오디오 해설
-					</p>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-	<table>
-		<tbody>
-			<tr>
-				<td>
-				</td>
-				<td>
-				</td>
-				<td>
-				</td>
-				<td>
-					<p>만 가능
+					<p>※ “1.2.3 오디오 해설 또는 미디어 대체수단 (사전 녹음된)”에서 오디오 해설만 가능
 					</p>
 				</td>
 			</tr>
@@ -2621,20 +2604,6 @@
 					</ul>
 					<p>- 사용자가 화면 방향을 결정할 수 있도록 해 주면, 특정한 기기나 방향으로 콘 텐츠를 사용해야 하는 사용자도 해당 콘텐츠를 사용할 수 있다.
 					</p>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-	<table>
-		<tbody>
-			<tr>
-				<td>
-				</td>
-				<td>
-				</td>
-				<td>
-				</td>
-				<td>
 					<p>예) 휠체어에 가로 방향으로 태블릿을 고정하여야 하는 사용자를 위해 콘텐츠 를 세로, 가로 방향에 무관하게 적절하게 재배치할 수 있도록 제공
 					</p>
 				</td>
@@ -3727,9 +3696,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<p>
-		<br>
-	</p>
+
 	<table>
 		<tbody>
 			<tr>
@@ -4018,9 +3985,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<p>
-		<br>
-	</p>
+
 	<table>
 		<tbody>
 			<tr>
@@ -4249,9 +4214,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<p>
-		<br>
-	</p>
+
 	<table>
 		<tbody>
 			<tr>
@@ -4520,9 +4483,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<p>
-		<br>
-	</p>
+
 	<table>
 		<tbody>
 			<tr>
@@ -4765,9 +4726,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<p>
-		<br>
-	</p>
+
 	<table>
 		<tbody>
 			<tr>
@@ -4984,9 +4943,7 @@
 	<p>다음 문서들은 본 표준의 이해를 돕기 위한 문서로서 특정 문서(발행일 및 판 번호 또는 개정 번호 를 명시한 것)와 일반 문서로
 		구별된다.
 	</p>
-	<p>
-		<br>
-	</p>
+
 	<ul>
 		<li>
 			<p>특정 문서인 경우 해당 판본 이후의 개정판은 적용되지 않는다.
@@ -4997,9 +4954,7 @@
 			</p>
 		</li>
 	</ul>
-	<p>
-		<br>
-	</p>
+
 	<ol>
 		<li data-list-text="[1]">
 			<p>JSA, JIS X8341-3, ‘고령자∙장애자 등 배려 설계 지침-정보 통신의 장비, 소프트웨어 및
@@ -5283,9 +5238,7 @@
 			</ol>
 		</li>
 	</ol>
-	<p>
-		<br>
-	</p>
+
 	<table>
 		<tbody>
 			<tr>
@@ -6018,9 +5971,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<p>
-		<br>
-	</p>
+
 	<table>
 		<tbody>
 			<tr>
@@ -6394,9 +6345,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<p>
-		<br>
-	</p>
+
 	<p>KS X OT0003:
 		2022
 	</p>
@@ -6410,9 +6359,7 @@
 	</div>
 	<p>
 	</p>
-	<p>
-		<br>
-	</p>
+
 	<table>
 		<tbody>
 			<tr>
