--- a/index.html
+++ b/index.html
@@ -39,49 +39,43 @@
 				<dd><a href="https://www.rra.go.kr/ko/reference/kcsList_view.do?nb_seq=1348&cpage=1&nb_type=6&kcs_select0=ALL&kcs_select1=ALL&kcs_select2=%C1%A4%BA%B8%B1%E2%BC%FA&searchCon=nb_name&searchTxt=%C1%A2%B1%D9%BC%BA">한국형 웹 콘텐츠 접근성 지침 2.1</a></dd>
 			</dl>
 		</details>
-		<p>이 표준에 대한 의견 또는 질문은 국립전파연구원 웹사이트를 이용하여 주십시오.
-		</p>
-		<p>이 표준은 방송통신표준화지침 제18조의 규정에 따라 매 5년마다 방송통신표준심의회에서 심의되어 확인, 개정 또는 폐지됩니다.
-		</p>
+		<p>이 표준에 대한 의견 또는 질문은 국립전파연구원 웹사이트를 이용하여 주십시오.</p>
+		<p>이 표준은 방송통신표준화지침 제18조의 규정에 따라 매 5년마다 방송통신표준심의회에서 심의되어 확인, 개정 또는 폐지됩니다.</p>
 		<hr title="Separator for header">
-		<p>온라인판 변경 사항 안.
-		</p>
-		<ul>
-			<li>읽기 쉽게 하기 위하여 원문의 목차순이 아닌 지침 중심으로 내용의 순서를 일부 변경하였습니다.</li>
-			<li>번호 표기 방식 등을 일원화하였습니다.</li>
-		</ul>
-		<hr title="Separator for header">
+		<div class="note">
+			<div role="heading" class="note-title marker" id="h-note-0" aria-level="2"><span>온라인판 관련 참고 사항</span></div>
+			<ul>
+				<li>이 문서는 공식 문서가 아니며, 원문 참조를 쉽게 만드릭 위해 HTML판으로 변환하여 게시한 것입니다.</li>
+				<li>원문의 내용을 변경하지는 않았으나, 보다 읽기 쉽도록 순서를 일부 변경하였습니다.</li>
+				<li>번호 표기 방식 등을 일원화하였습니다.</li>
+				<li>오류 신고 및 편집 참여 등의 의견은 <a href="https://github.com/a11ykr/kwcag22">Github 저장소</a>에 남겨주시기 바랍니다.(github 계정 필요)</li>
+			</ul>
+		</div>
 	</div>
 	<section id="preface" class="informative introductory">
 		<h2>‌머리말</h2>
 		<p>
 			이 표준은 방송통신표준화법 관련 규정에 따라 방송통신표준심의회 심의를 거쳐 개정한 방송통신 표준이다. 이에 따라 KS X OT0003:2015은 개정되어 이 표준으로 바뀌었다.
-			.
 		</p>
 		<p>
 			이 표준의 일부가 기술적 성질을 가진 특허권, 출원공개 이후의 특허출원, 실용신안권 또는 출원공개 후의 실용신안등록출원에 저촉될 가능성이 있다는 것에 주의를 환기한다. 관계 중앙행정기관의 장과 방송통신표준심의회는 이러한 기술적 성질을 가진 특허권, 출원공개 이후의 특허출원, 실용신안권 또 는 출원공개 후의 실용신안등록출원에 관계되는 확인에 대하여 책임을 지지 않는다.
-			.
 		</p>
 		<p>한국형 웹 콘텐츠 접근성 지침 2.2(Korean Web Content accessibility guidelines 2.2)는 웹 콘텐츠의 접근성을 향상시키기 위한 기술적 규격을 포함하고 있다.
 		</p>
 		<p>
 			이 표준에 포함된 지침들은 시각장애, 저시력장애, 청각장애, 지체장애, 학습장애, 지적장애, 뇌병변장 애, 광과민성 증후 등과 같은 개별적인 장애를 가진 사용자들이 쉽게 접근할 수 있는 웹 콘텐츠를 구축하는 데 필요한 방법을 소개하고 있다. 그러나 중복장애를 가지고 있는 사용자의 경우에는 본 표준에서 제시하는 방법만으로 구현한 웹 콘텐츠에 접근하기 어려운 경우도 발생할 수 있다.
-			.
 		</p>
 		<p>
 			이 표준에서는 웹 접근성의 준수 여부를 평가할 수 있는 요구 조건과 지침들을 준수하면 얻을 수 있 는 기대 효과를 소개하고 있다. 그러나 지침들을 가능한 한 준수하기 위해서 특정한 기술이 사용되 어야 함을
 			전제하지 않았다. 그 이유는 본 표준에 포함된 지침들을 제정하는 시점에서 사용되는 기술만으로 한계를 정하기보다는 앞으로 개발될 기술을 최대한 수용할 수 있도록 하였기 때문이다. 이로 인하여 향후 개발될 여러 가지
 			기술을 적용하기 위해 본 표준이 전면적으로 수정되어야 하는 일을 피할 수 있다.
-			.
 		</p>
 		<p>
 			이 표준의 체제는 원칙(principle), 지침(guideline), 검사항목(requirement)의 3단계로 구성되었다. 개정된 웹 접근성 표준은 웹 접근성 제고를 위한 4가지 원칙과 각 원칙을 준수하기
 			위한 14개 지침 및 해당 지침의 준수 여부를 확인하기 위해 33개의 검사항목을 제시하였다.
-			.
 		</p>
 		<p>
 			이 표준은 국내 웹 관련 산업 및 정책 전반에 영향을 미칠 것이며, 장애인이 비장애인과 동등하게 인터넷을 이용할 수 있는 환경 조성에 기여할 것이다. 또한, 『지능정보화기본법』, 『장애인 차별금 지 및 권리구제 등에 관한 법률』에 의거 의무화된 웹 접근성 부문의 표준으로 활용될 수 있다.
-			.
 		</p>
 	</section>
 	<section id="abstract" class="informative introductory">
@@ -104,7 +98,6 @@
 		</ul>
 		<p>
 			이 표준에서는 지침을 준수하는 방법과 지침을 준수하는 경우 장애인의 접근성 향상에 도움이 되는 점을 소개하고 있다. 그러나 본 표준에서는 웹브라우저나 컴퓨터, 운영체제의 종류 등은 고려하지 않 았다. 그 이유는 본 표준에서 제시하는 기술은 현시점의 기술뿐만 아니라 향후 개발될 기술까지도 최대한 수용하지만 기술 발전에 따라 표준의 내용이 빈번하게 수정 또는 개정되는 일을 피할 수 있 기 때문이다.
-			.
 		</p>
 	</section>
 	<nav id="toc">
@@ -275,7 +268,6 @@
 		</div>
 		<p>
 			이 표준은 원칙, 지침, 검사항목의 3단계로 구성되어 있다. 본 표준을 준수할 경우, 장애인, 고령자 등이 비장애인, 젊은이 등과 동등하게 웹사이트에서 제공하는 콘텐츠를 인식하고, 이를 운영하고 이 해할 수 있다. 물론 본 표준을 모두 준수한 경우에도 학력, 장애 유형과 정도(장애의 중복 또는 장애 의 경중 등), 컴퓨터 및 인터넷 사용 경험, 보조기술 이용 능력 등에 따라 웹 콘텐츠에 대한 접근이 불가능한 경우가 발생할 수도 있다. 그렇기 때문에 장애인 및 고령자 등을 대상으로 하는 정보화 교 육이 필요하며, 장애인에게는 맞춤형 보조기술을 제공할 필요가 있다. 다만, 이 표준을 준수하여 웹 콘텐츠를 제작하는 경우, 단일 장애를 지닌 사용자에게 필요한 대부분의 웹 접근성과 관련된 문제를 해결할 수 있을 것이다.
-			.
 		</p>
 		<table class="counts" summary="한국형 웹 콘텐츠 접근성 지침 2.2의 원칙, 지침, 검사항목 수">
 			<caption>표 1 — 한국형 웹 콘텐츠 접근성 지침 2.2 개요</caption>
@@ -314,7 +306,6 @@
 		</div>
 		<p>
 			인식의 용이성은 사용자가 장애 유무 등에 관계없이 웹사이트에서 제공하는 모든 콘텐츠를 동등하게 인식할 수 있도록 제공하는 것을 의미한다. 인식의 용이성은 대체 텍스트, 멀티미디어 대체수단, 적응성, 명료성의 4가지 지침으로 구성되어 있다.
-			.
 		</p>
 		<table class="criteria" summary="인식의 용이성 지침과 검사항목">
 			<caption>표 2 — 인식의 용이성 관련 지침 및 검사항목</caption>
@@ -664,7 +655,6 @@
 		</div>
 		<p>
 			운용의 용이성은 사용자가 장애 유무 등에 관계없이 웹사이트에서 제공하는 모든 기능을 운용할 수 있도록 제공하는 것을 의미한다. 운용의 용이성은 입력장치 접근성, 충분한 시간 제공, 광과민성 발 작 예방, 쉬운 내비게이션, 입력 방식의 5가지 지침으로 구성되어 있다.
-			.
 		</p>
 		<table class="criteria">
 			<caption>표 3 — 운용의 용이성 관련 지침 및 검사항목</caption>
@@ -1480,7 +1470,6 @@
 		</div>
 		<p>
 			이해의 용이성은 사용자가 장애 유무 등에 관계없이 웹 사이트에서 제공하는 콘텐츠를 이해할 수 있 도록 제공하는 것을 의미한다. 이해의 용이성은 가독성, 예측 가능성, 입력 도움의 3가지 지침으로 구성되어 있다.
-			.
 		</p>
 		<table class="criteria">
 			<caption>표 4 — 이해의 용이성 관련 지침 및 검사항목</caption>
@@ -2400,11 +2389,44 @@
 				<div class="header-wrapper">
 					<h3>심의</h3>
 				</div>
+				<p>정보보호 기술심의회</p>
+				<h4>회장</h4>
+				<p>염흥열 순천향대학교 교수</p>
+				<h4>위원</h4>
+				<ul>
+					<li>권대성 국가보안기술연구소 책임연구원</li>
+					<li>김재성 한국인터넷진흥원 센터장</li>
+					<li>나재훈 한국전자통신연구원 전문위원</li>
+					<li>이창훈 서울과학기술대학교 교수</li>
+					<li>전명근 충북대학교 교수</li>
+					<li>진승헌 한국전자통신연구원 책임연구원</li>
+				</ul>
+				<h4>간사</h4>
+				<p>최영선 국립전파연구원 과장</p>
 			</section>
 			<section class="informative" id="editor">
 				<div class="header-wrapper">
 					<h3>원안 작성 협력</h3>
 				</div>
+				<p>한국정보통신기술협회</p>
+				<h4>연구책임자</h4>
+				<p>노석준 성신여자대학교 교수</p>
+				<h4>참여연구원</h4>
+				<ul>
+					<li>김현경 광운대학교 교수</li>
+					<li>안동한 한국시각장애인연합회 팀장</li>
+					<li>김정호 액스비전테크놀로지 이사</li>
+					<li>김상화 한국ICT접근성연구센터 이사</li>
+					<li>김명운 삼성전자 책임</li>
+					<li>이지용 LG전자 책임</li>
+					<li>노주환 밸류어블디자인 수석</li>
+					<li>김해은 유에이랩 실장</li>
+					<li>신현석 오드컨셉 팀장</li>
+					<li>정찬명 레진앤터테인먼트 팀장</li>
+					<li>김군우 데이블 이사</li>
+				</ul>
+				<h4>간사</h4>
+				<p>한정기 한국지능정보화사회진흥원 수석연구원</p>
 			</section>
 		</section>
 		<section class="informative" id="wcag-21">
@@ -4889,12 +4911,8 @@
 			</table>
 			<p>원칙 4개
 			</p>
-			<p>지침 14개: 13개 
-				14개, 신규 2개, 삭제 1개
-			</p>
-			<p>검사항목 33개: 24개 
-				33개, 신규 9개
-			</p>
+			<p>지침 14개: 13개 &gt; 14개, 신규 2개, 삭제 1개</p>
+			<p>검사항목 33개: 24개 &gt; 33개, 신규 9개</p>
 		</section>
 		<script id="respec-dfn-panel">(() => {
 			// @ts-check
