--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@
 			</section>
 			<section class="guideline" id="label-in-name">
 				<div class="header-wrapper">
-					<h4 id="x6-5-3-label-in-name"><bdi class="secno"> 6.5.3 </bdi>(레이블과 네임) 텍스트 또는 텍스트 이미지가 포함된 레이블이 있는 사용자 인터페이스 구성요소는 시각적으로 표시되는 해당 텍스트를 네임에 포함해야</h4>
+					<h4 id="x6-5-3-label-in-name"><bdi class="secno"> 6.5.3 </bdi>(레이블과 네임) 텍스트 또는 텍스트 이미지가 포함된 레이블이 있는 사용자 인터페이스 구성요소는 시각적으로 표시되는 해당 텍스트를 네임에 포함해야 한다.</h4>
 					<a class="self-link" href="#label-in-name" aria-label="섹션 고유링크 6.5.3"></a>
 				</div>
 				<p>
