--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 							<li class="tocline"><a class="tocxref" href="#keyboard"><bdi class="secno">6.1.1 </bdi>키보드 사용 보장</a></li>
 							<li class="tocline"><a class="tocxref" href="#focus"><bdi class="secno">6.1.2 </bdi>초점 이동과 표시</a></li>
 							<li class="tocline"><a class="tocxref" href="#target"><bdi class="secno">6.1.3 </bdi>조작 가능</a></li>
-							<li class="tocline"><a class="tocxref" href="#target"><bdi class="secno">6.1.4 </bdi>문자 단축키</a></li>
+							<li class="tocline"><a class="tocxref" href="#character-key-shortcuts"><bdi class="secno">6.1.4 </bdi>문자 단축키</a></li>
 						</ol>
 					</li>
 					<li class="tocline"><a class="tocxref" href="#enough-time"><bdi class="secno">6.2 </bdi>충분한 시간 제공</a>
@@ -163,7 +163,7 @@
 							<li class="tocline"><a class="tocxref" href="#bypass-blocks"><bdi class="secno">6.4.1 </bdi>반복 영역 건너뛰기</a></li>
 							<li class="tocline"><a class="tocxref" href="#page-titled"><bdi class="secno">6.4.2 </bdi>제목 제공</a></li>
 							<li class="tocline"><a class="tocxref" href="#link-text"><bdi class="secno">6.4.3 </bdi>적절한 링크 텍스트</a></li>
-							<li class="tocline"><a class="tocxref" href="#location"><bdi class="secno">6.4.4 </bdi>고정된 참조 위치 정보</a></li>
+							<li class="tocline"><a class="tocxref" href="#page-break-navigation"><bdi class="secno">6.4.4 </bdi>고정된 참조 위치 정보</a></li>
 						</ol>
 					</li>
 					<li class="tocline"><a class="tocxref" href="#input-modalities"><bdi class="secno">6.5 </bdi>입력 방식</a>
@@ -1203,10 +1203,10 @@
 					</li>
 				</ol>
 			</section>
-			<section class="guideline" id="location">
+			<section class="guideline" id="page-break-navigation">
 				<div class="header-wrapper">
-					<h4 id="x6-4-4-location"><bdi class="secno"> 6.4.4 </bdi>(고정된 참조 위치 정보) 전자출판문서 형식의 웹 페이지는 각 페이지로 이동할 수 있는 기능이 있어야 하고, 서식이나 플랫폼에 상관없이 참조 위치 정보를 일관되게 제공ㆍ유지해야 한다.</h4>
-					<a class="self-link" href="#location" aria-label="섹션 고유링크 6.4.4"></a>
+					<h4 id="x6-4-4-page-break-navigation"><bdi class="secno"> 6.4.4 </bdi>(고정된 참조 위치 정보) 전자출판문서 형식의 웹 페이지는 각 페이지로 이동할 수 있는 기능이 있어야 하고, 서식이나 플랫폼에 상관없이 참조 위치 정보를 일관되게 제공ㆍ유지해야 한다.</h4>
+					<a class="self-link" href="#page-break-navigation" aria-label="섹션 고유링크 6.4.4"></a>
 				</div>
 				<p>
 					페이지 구분이 있는 전자출판문서 형식의 웹 페이지는 참조 위치 정보(예: 페이지 번호와 같은 페이 지 구분자(pagebreak locators))를 제공해야 하고, 각 페이지로 이동할 수 있는 기능도 제공해야 한다. 또한 콘텐츠의 확대/축소 등으로 서식이 변경되거나 플랫폼이 변경되어 참조 위치 정보가 사라지거 나 일관된 위치에 제공ㆍ유지되지 않을 경우, 참조 위치 정보를 사용하여 콘텐츠의 특정 부분을 지 칭해야 하는 상황(강의 등)에서 어려움이 있을 수 있기 때문에, 해당 참조 위치 정보는 서식이나 플 랫폼이 변경되더라도 일관된 위치에 제공ㆍ유지해야 한다.
@@ -4288,44 +4288,35 @@
 				<tbody>
 					<tr>
 						<td>
-							<p>6.1.4 문자 단축키
-							</p>
+							<p><a class="tocxref" href="#character-key-shortcuts"><bdi class="secno">6.1.4 </bdi>문자 단축키</a></p>
 						</td>
 						<td>
-							<p>6.5.1 단일 포인터 입력 지원
-							</p>
+							<p><a class="tocxref" href="#pointer-gestures"><bdi class="secno">6.5.1 </bdi>단일 포인터 입력 지원</a></p>
 						</td>
 						<td>
-							<p>6.5.2 포인터 입력 취소
-							</p>
+							<p><a class="tocxref" href="#pointer-cancellation"><bdi class="secno">6.5.2 </bdi>포인터 입력 취소</a></p>
 						</td>
 					</tr>
 					<tr>
 						<td>
-							<p>6.5.3 레이블과 네임
-							</p>
+							<p><a class="tocxref" href="#label-in-name"><bdi class="secno">6.5.3 </bdi>레이블과 네임</a></p>
 						</td>
 						<td>
-							<p>6.5.4 동작기반 작동
-							</p>
+							<p><a class="tocxref" href="#label-in-name"><bdi class="secno">6.5.4 </bdi>동작기반 작동</a></p>
 						</td>
 						<td>
-							<p>6.4.4 고정된 참조 위치 정보
-							</p>
+							<p><a class="tocxref" href="#page-break-navigation"><bdi class="secno">6.4.4 </bdi>고정된 참조 위치 정보</a></p>
 						</td>
 					</tr>
 					<tr>
 						<td>
-							<p>7.2.2 찾기 쉬운 도움 정보
-							</p>
+							<p><a class="tocxref" href="#consistent-help"><bdi class="secno">7.2.2 </bdi>찾기 쉬운 도움 정보</a></p>
 						</td>
 						<td>
-							<p>7.3.3 접근 가능한 인증
-							</p>
+							<p><a class="tocxref" href="#accessible-authentication"><bdi class="secno">7.3.3 </bdi>접근 가능한 인증</a></p>
 						</td>
 						<td>
-							<p>7.3.4 반복 입력 정보
-							</p>
+							<p><a class="tocxref" href="#redundant-entry"><bdi class="secno">7.3.4 </bdi>반복 입력 정보</a></p>
 						</td>
 					</tr>
 				</tbody>
