--- a/index.html
+++ b/index.html
@@ -1045,10 +1045,11 @@
 					<h4 id="x6-4-1-bypass-blocks"><bdi class="secno"> 6.4.1 </bdi>(반복 영역 건너뛰기) 콘텐츠의 반복되는 영역은 건너뛸 수 있어야 한다.</h4>
 					<a class="self-link" href="#bypass-blocks" aria-label="섹션 고유링크 6.4.1"></a>
 				</div>
-				<p>키보드 사용자는 페이지가 로딩된 이후 모든 웹 페이지에 공통적으로 들어있는 메뉴 및 링크 목록 등을 탭 키를 이용하여 순차적으로 내비게이션한 후에 핵심 영역에 도달하게 된다.
+				<p>
+					키보드 사용자는 페이지가 로딩된 이후 모든 웹 페이지에 공통적으로 들어있는 메뉴 및 링크 목록 등을 탭 키를 이용하여 순차적으로 내비게이션한 후에 핵심 영역에 도달하게 된다.
 					화면낭독프로그 램을 이용하는 사람은 메뉴 등을 페이지가 로딩되거나 갱신될 때마다 모든 웹 페이지에 공통적으로 들어있는 메뉴 등을 다시 듣게 된다.
 					키보드 사용자와 화면낭독프로그램 사용자가 겪게 되는 이러한 불편을 방지하기 위해, 사용자가 메뉴 등과 같은 반복 영역을 바로 건너뛰어 핵심 영역으로
-					직접 이 동할 수 있는 수단을 제공해야 한다.
+					직접 이동할 수 있는 수단을 제공해야 한다.
 				</p>
 				<ol>
 					<li>
@@ -1100,11 +1101,7 @@
 				</p>
 				<ol>
 					<li>
-						<p>웹 페이지 제목(title) 제공: 모든 웹 페이지가 해당 내용을 간단명료하게 기술한 제목을 포함하고 있을 경우,
-							사용자(예: 시각장애인, 지적장애인, 중증지체장애인
-							등)는 여러 개의 웹 페이지가 열려 있더라도 제목을 통해 웹 페이지를 선택하므로, 모든 웹 페이지에는 해당 페이지를 간단명료하게
-							설명한 제목을 제공해야 한다. 또한, 웹 페이지는 유일하고 서로 다른(unique and exclusive)
-							제목을 제공해야 한다.
+						<p>웹 페이지 제목(title) 제공: 모든 웹 페이지가 해당 내용을 간단명료하게 기술한 제목을 포함하고 있을 경우, 사용자(예: 시각장애인, 지적장애인, 중증지체장애인 등)는 여러 개의 웹 페이지가 열려 있더라도 제목을 통해 웹 페이지를 선택하므로, 모든 웹 페이지에는 해당 페이지를 간단명료하게 설명한 제목을 제공해야 한다. 또한, 웹 페이지는 유일하고 서로 다른(unique and exclusive) 제목을 제공해야 한다.
 						</p>
 					</li>
 					<li>
@@ -1113,10 +1110,7 @@
 					</li>
 					<li>
 						<p>프레임 제목(title) 제공: 웹 페이지의 모든 프레임에는 각 프레임을 설명하는 간단명료한 제목을 제공해야 한다.
-							모든 프레임에 간단명료한 제목이 부여되면, 사용자(예: 시각장애인,
-							지적장애인, 중증지체장애인 등)는 프레임 제목을 통해 프레임의 선택, 이동 등이
-							가능하다. 아무런 내용이 없는 프레임에도 '빈 프레임' 등과 같이 제목을 제공해야
-							한다.
+							모든 프레임에 간단명료한 제목이 부여되면, 사용자(예: 시각장애인, 지적장애인, 중증지체장애인 등)는 프레임 제목을 통해 프레임의 선택, 이동 등이 가능하다. 아무런 내용이 없는 프레임에도 '빈 프레임' 등과 같이 제목을 제공해야 한다.
 						</p>
 					</li>
 					<li>
@@ -1125,8 +1119,7 @@
 						</p>
 					</li>
 					<li>
-						<p>특수 기호 사용 제한: 웹 페이지, 프레임 또는 콘텐츠 블록의 제목은 문장의 하나로 간주하여 불필요한 특수 기호를 반복하여 사용하지
-							않아야 한다.
+						<p>특수 기호 사용 제한: 웹 페이지, 프레임 또는 콘텐츠 블록의 제목은 문장의 하나로 간주하여 불필요한 특수 기호를 반복하여 사용하지 않아야 한다.
 						</p>
 					</li>
 				</ol>
@@ -1134,10 +1127,7 @@
 				</p>
 				<ol>
 					<li>
-						<p>웹사이트가 제공하는 모든 웹 페이지에 서로 다른 제목을 제공하면, 사용자(예: 시각장애인,
-							지적장애인, 지체장애인 등)는 동시에 여러 개의 웹 페이지가 열려 있더라도 웹 페이지의 제목을 확인하여 열려있는 웹
-							페이지 간을 편리하게 이동할 수 있다. 이를 위해, 각 페이지는 해당 페이지만의 유일하고 서로 다른 페이지 제목을 가져야
-							한다.
+						<p>웹사이트가 제공하는 모든 웹 페이지에 서로 다른 제목을 제공하면, 사용자(예: 시각장애인, 지적장애인, 지체장애인 등)는 동시에 여러 개의 웹 페이지가 열려 있더라도 웹 페이지의 제목을 확인하여 열려있는 웹 페이지 간을 편리하게 이동할 수 있다. 이를 위해, 각 페이지는 해당 페이지만의 유일하고 서로 다른 페이지 제목을 가져야 한다.
 						</p>
 					</li>
 					<li>
@@ -1209,7 +1199,7 @@
 					<a class="self-link" href="#page-break-navigation" aria-label="섹션 고유링크 6.4.4"></a>
 				</div>
 				<p>
-					페이지 구분이 있는 전자출판문서 형식의 웹 페이지는 참조 위치 정보(예: 페이지 번호와 같은 페이 지 구분자(pagebreak locators))를 제공해야 하고, 각 페이지로 이동할 수 있는 기능도 제공해야 한다. 또한 콘텐츠의 확대/축소 등으로 서식이 변경되거나 플랫폼이 변경되어 참조 위치 정보가 사라지거 나 일관된 위치에 제공ㆍ유지되지 않을 경우, 참조 위치 정보를 사용하여 콘텐츠의 특정 부분을 지 칭해야 하는 상황(강의 등)에서 어려움이 있을 수 있기 때문에, 해당 참조 위치 정보는 서식이나 플 랫폼이 변경되더라도 일관된 위치에 제공ㆍ유지해야 한다.
+					페이지 구분이 있는 전자출판문서 형식의 웹 페이지는 참조 위치 정보(예: 페이지 번호와 같은 페이지 구분자(pagebreak locators))를 제공해야 하고, 각 페이지로 이동할 수 있는 기능도 제공해야 한다. 또한 콘텐츠의 확대/축소 등으로 서식이 변경되거나 플랫폼이 변경되어 참조 위치 정보가 사라지거 나 일관된 위치에 제공ㆍ유지되지 않을 경우, 참조 위치 정보를 사용하여 콘텐츠의 특정 부분을 지 칭해야 하는 상황(강의 등)에서 어려움이 있을 수 있기 때문에, 해당 참조 위치 정보는 서식이나 플 랫폼이 변경되더라도 일관된 위치에 제공ㆍ유지해야 한다.
 				</p>
 				<p>검사항목 6.4.4을 준수함으로써 얻을 수 있는 기대효과는 다음과 같다.
 				</p>
@@ -1310,7 +1300,7 @@
 					<a class="self-link" href="#label-in-name" aria-label="섹션 고유링크 6.5.3"></a>
 				</div>
 				<p>
-					사용자 인터페이스 구성요소(예: 메뉴, 링크, 버튼 등)에서 시각적으로 표시되는 텍스트를 네임에 제 공하지 않은 경우 보조기술이 해당 사용자 인터페이스 구성요소를 인식할 수 없기 때문에, 네임에는 시각적으로 표시되는 텍스트를 제공해야 한다. 또한 네임과 텍스트를 다르게 제공한 경우 해당 정보 사용자(예: 음성명령 사용자)가 혼란을 겪을 수 있기 때문에, 네임과 텍스트는 동일하게 제공하는 것 이 좋으며, 동일하지 않게 제공할 경우 텍스트는 네임의 앞부분에 제시하는 것이 좋다. 단, 텍스트나 텍스트 이미지가 포함된 레이블이 없는 사용자 인터페이스 구성요소는 본 지침이 적용되지 않는다.
+					사용자 인터페이스 구성요소(예: 메뉴, 링크, 버튼 등)에서 시각적으로 표시되는 텍스트를 네임에 제공하지 않은 경우 보조기술이 해당 사용자 인터페이스 구성요소를 인식할 수 없기 때문에, 네임에는 시각적으로 표시되는 텍스트를 제공해야 한다. 또한 네임과 텍스트를 다르게 제공한 경우 해당 정보 사용자(예: 음성명령 사용자)가 혼란을 겪을 수 있기 때문에, 네임과 텍스트는 동일하게 제공하는 것이 좋으며, 동일하지 않게 제공할 경우 텍스트는 네임의 앞부분에 제시하는 것이 좋다. 단, 텍스트나 텍스트 이미지가 포함된 레이블이 없는 사용자 인터페이스 구성요소는 본 지침이 적용되지 않는다.
 				</p>
 				<p>검사항목 6.5.3을 준수함으로써 얻을 수 있는 기대효과는 다음과 같다.
 				</p>
@@ -1489,8 +1479,7 @@
 							</ol>
 						</li>
 						<li>
-							<p>입력에 따른 변화: 사용자가 선택할 수 있는 콘트롤(예: 콤보 박스, 라디오
-								버튼, 체크 박스 등)에서 어떤 항목을 선택하는 경우, 해당 항목이 의미하는 기능이 실행되거나 서식 제출이
+							<p>입력에 따른 변화: 사용자가 선택할 수 있는 콘트롤(예: 콤보 박스, 라디오버튼, 체크 박스 등)에서 어떤 항목을 선택하는 경우, 해당 항목이 의미하는 기능이 실행되거나 서식 제출이
 								일어나지 않아야 한다. 실제로 해당 기능이 실행되거나 서식 제출이 일어나는 것은 사용자가 선택할 수 있는 콘트롤과 함께 제공되는 실행 버튼을
 								활성화(클릭)하였을 때 비로소 실행되어야 한다. 단, 기능의 실행이 아니라 초점을 받은
 								사용자 입력 또는 콘트롤의 색깔이 반전되거나 테두리가 생기는 것과 같은 시각적인 변화, 또는 사용자 제어(초점)가 이동하지 않은 상태에서 나타나는 추가 정보 등은 입력 변화에 따른 기능의 실행으로 간주하지 않는다.
@@ -1622,17 +1611,15 @@
 						<h4 id="x7-3-8-accessible-authentication"><bdi class="secno"> 7.3.3 </bdi>(접근 가능한 인증) 인증 과정은 인지 기능 테스트에만 의존해서는 안 된다.</h4>
 						<a class="self-link" href="#accessible-authentication" aria-label="섹션 고유링크 7.3.3"></a>
 					</div>
-					<p>사용자 로그인 등과 같은 인증 과정이 인지 기능 테스트(예: 로그인을 위한 비밀번호 입력, 터치스크 린 화면의 패턴
-						인식, 임의의 문자열 기억, 계산 수행, 특정 객체를 포함하고 있는 이미지 찾기 등)에
-						의존하는 경우, 인지 기능 테스트에 의존하지 않는 인증 방법을 적어도 하나 이상 제공해야 한다.
+					<p>
+						사용자 로그인 등과 같은 인증 과정이 인지 기능 테스트(예: 로그인을 위한 비밀번호 입력, 터치스크린 화면의 패턴 인식, 임의의 문자열 기억, 계산 수행, 특정 객체를 포함하고 있는 이미지 찾기 등)에 의존하는 경우, 인지 기능 테스트에 의존하지 않는 인증 방법을 적어도 하나 이상 제공해야 한다.
 					</p>
-					<p>인지 기능 테스트에 의존하지 않고 인증을 하기 위해서는 브라우저가 아이디/비밀번호를 저장할 수 있도록 마크업된 서식,
-						공개인증(OAuth: Open Authorization)를 통한 서드 파티, 신체(얼굴,
-						지문 등)나 물건(휴대폰, USB 등)을 이용한 인증 등을 이용할 수
-						있다. 다만, 이미 사용자 자신에게 익숙하여 별 도의 인지적인 노력을 필요로 하지 않는 사용자의 이름이나 이메일 주소,
-						전화번호는 인지 기능 테 스트로 간주하지 않는다.
+					<p>
+						인지 기능 테스트에 의존하지 않고 인증을 하기 위해서는 브라우저가 아이디/비밀번호를 저장할 수 있도록 마크업된 서식, 공개인증(OAuth: Open Authorization)를 통한 서드 파티, 신체(얼굴,
+						지문 등)나 물건(휴대폰, USB 등)을 이용한 인증 등을 이용할 수 있다. 다만, 이미 사용자 자신에게 익숙하여 별 도의 인지적인 노력을 필요로 하지 않는 사용자의 이름이나 이메일 주소, 전화번호는 인지 기능 테 스트로 간주하지 않는다.
 					</p>
-					<p>검사항목 7.3.3을 준수함으로써 얻을 수 있는 기대효과는 다음과 같다.
+					<p>
+						검사항목 7.3.3을 준수함으로써 얻을 수 있는 기대효과는 다음과 같다.
 					</p>
 					<ol>
 						<li>
@@ -1652,15 +1639,18 @@
 						예를 들어, 온라인 구매에서 주문자와 수령자 주소 가 동일한 경우, 이전 단계에서 입력한 주문자 주소를 수령자 주소에 재입력
 						없이 선택하여 채울 수 있다. 다만, 패스워드와 같이 보안 목적 등으로 재입력이 필수적인 경우는 예외로 간주한다.
 					</p>
-					<p>검사항목 7.3.4을 준수함으로써 얻을 수 있는 기대효과는 다음과 같다.
+					<p>
+						검사항목 7.3.4을 준수함으로써 얻을 수 있는 기대효과는 다음과 같다.
 					</p>
 					<ol>
 						<li>
-							<p>기억 또는 인지 기능에 어려움을 겪는 사용자의 특정 정보에 대한 반복적인 입력으로 인한 스트레스와 실수 발생 가능성을 줄일 수 있다.
+							<p>
+								기억 또는 인지 기능에 어려움을 겪는 사용자의 특정 정보에 대한 반복적인 입력으로 인한 스트레스와 실수 발생 가능성을 줄일 수 있다.
 							</p>
 						</li>
 						<li>
-							<p>움직임에 제약이 있는 사용자(예: 스위치 콘트롤 또는 음성 입력 사용자)의 텍스트 입력 부담을 줄여줄 수 있다.
+							<p>
+								움직임에 제약이 있는 사용자(예: 스위치 콘트롤 또는 음성 입력 사용자)의 텍스트 입력 부담을 줄여줄 수 있다.
 							</p>
 						</li>
 					</ol>
@@ -1672,7 +1662,8 @@
 				<h2 id="x8-robust"><bdi class="secno">8. </bdi> 견고성</h2>
 				<a class="self-link" href="#robust" aria-label="섹션 고유링크 8."></a>
 			</div>
-			<p>견고성은 사용자가 콘텐츠를 이용할 수 있도록 기술에 영향을 받지 않아야 함을 의미한다. 견고성은 문법 준수, 웹 애플리케이션 접근성의 2가지 지침으로 구성되어 있다.
+			<p>
+				견고성은 사용자가 콘텐츠를 이용할 수 있도록 기술에 영향을 받지 않아야 함을 의미한다. 견고성은 문법 준수, 웹 애플리케이션 접근성의 2가지 지침으로 구성되어 있다.
 			</p>
 			<table class="criteria">
 				<caption>>표 5 — 견고성 관련 지침 및 검사항목</caption>
