--- a/index.html
+++ b/index.html
@@ -2040,7 +2040,7 @@
 						<bdi class="secno">3.1.28 </bdi><dfn data-dfn-type="dfn" id="dfn-online-form">온라인 서식(online form)</dfn>
 					</dt>
 					<dd>
-						<p>사용자의 입력을 통해 값을 수정하여 전달할 수 있는 여러 가지 콘트롤(예: 텍스트 입력 박스, 드롭 다운 선택 메뉴, 라디오 버튼, 누르는 버튼 등)과 그것의 레이블로 구성된 콘텐.
+						<p>사용자의 입력을 통해 값을 수정하여 전달할 수 있는 여러 가지 콘트롤(예: 텍스트 입력 박스, 드롭 다운 선택 메뉴, 라디오 버튼, 누르는 버튼 등)과 그것의 레이블로 구성된 콘텐츠.
 						</p>
 					</dd>
 					<dt>
@@ -2062,7 +2062,7 @@
 						<bdi class="secno">3.1.31 </bdi><dfn data-dfn-type="dfn" id="dfn-voice-input-device">음성 입력장치(voice input device)</dfn>
 					</dt>
 					<dd>
-						<p>음성으로 컴퓨터를 제어하거나 텍스트를 입력할 수 있도록 구성된 시스템 또는 이러한 시스템을 구성하는 데 사용되는 프로그.
+						<p>음성으로 컴퓨터를 제어하거나 텍스트를 입력할 수 있도록 구성된 시스템 또는 이러한 시스템을 구성하는 데 사용되는 프로그램.
 						</p>
 					</dd>
 					<dt>
@@ -2153,15 +2153,14 @@
 						<bdi class="secno">3.1.42 </bdi><dfn data-dfn-type="dfn" id="dfn-images-of-text">텍스트 이미지(images of text)</dfn>
 					</dt>
 					<dd>
-						<p>특정한 시각적인 효과를 얻기 위하여 텍스트가 아닌 형태(예: 이미지)로 렌더링된 텍스.
+						<p>특정한 시각적인 효과를 얻기 위하여 텍스트가 아닌 형태(예: 이미지)로 렌더링된 텍스트.
 						</p>
 					</dd>
 					<dt>
 						<bdi class="secno">3.1.43 </bdi><dfn data-dfn-type="dfn" id="dfn-pull-down-menu">풀다운 메뉴(pull-down menu)</dfn>
 					</dt>
 					<dd>
-						<p>메뉴바(menu bar)에서 특정 항목을 선택(마우스 오버, 키보드를 이용한 초점)하거나, 활성화(마우스 클릭 또는 엔터키의 누름 등)하면 선택한 메뉴 항목의 아래쪽으로 하위 메뉴 항목들이 펼쳐져
-							나타나는 방식의 메.
+						<p>메뉴바(menu bar)에서 특정 항목을 선택(마우스 오버, 키보드를 이용한 초점)하거나, 활성화(마우스 클릭 또는 엔터키의 누름 등)하면 선택한 메뉴 항목의 아래쪽으로 하위 메뉴 항목들이 펼쳐져 나타나는 방식의 메뉴.
 						</p>
 					</dd>
 					<dt>
