--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 				</dt>
 				<dd>
 					<p>
-						멀티미디어 콘텐츠에 포함된 음성(대화)을 대체하기 위한 콘텐츠. 자막, 구술된 내용을 글로 옮긴 대본(transcript), 수어(sign language) 등이 그것이다. 여기에서 자막과 대본은 텍스트 콘텐츠이며, 수어 는 미디어 형식의 대체 콘텐츠이다.
+						멀티미디어 콘텐츠에 포함된 음성(대화)을 대체하기 위한 콘텐츠. 자막, 구술된 내용을 글로 옮긴 대본(transcript), 수어(sign language) 등이 그것이다. 여기에서 자막과 대본은 텍스트 콘텐츠이며, 수어는 미디어 형식의 대체 콘텐츠이다.
 					</p>
 				</dd>
 				<dt>
@@ -424,7 +424,7 @@
 					<bdi class="secno">3.1.19 </bdi><dfn data-dfn-type="dfn" id="dfn-repetitive-block">반복 영역(repetitive block)</dfn>
 				</dt>
 				<dd>
-					<p>반복되는 영역, 메뉴, 링크 모음과 같이 동일한 내용이 여러 웹 페이지에 걸쳐 같은 위치에서 나타나 는 영역. 글로벌 내비게이션(global navigation)도 반복 영역의 하나이다. 모든
+					<p>반복되는 영역, 메뉴, 링크 모음과 같이 동일한 내용이 여러 웹 페이지에 걸쳐 같은 위치에서 나타나는 영역. 글로벌 내비게이션(global navigation)도 반복 영역의 하나이다. 모든
 						페이지에 걸쳐 존재하는 광고 영역 등도 그 내용의 다름 여부와 관계없이 반복 영역으로 간주된다.
 					</p>
 				</dd>
@@ -564,7 +564,7 @@
 				</dt>
 				<dd>
 					<p>웹 페이지 안에서 프로그램에 의해 또는 사용자의 행위(예: 탭(tab) 키를 이용한 이동)에 의해 어떤 요소(element)가 선택되었을 경우 초점이 그 요소에 있다고 말함. 또한 어떤 요소가
-						선택되었다는 것 은 그 요소가 사용 가능한 상태임을 의미한다. 대부분의 응용 소프트웨어(웹 브라우저 포함)에서 초 점을 받은 요소는 다른 요소와 구분할 수 있게 밑줄을 보이게 하거나, 테두리를
+						선택되었다는 것은 그 요소가 사용 가능한 상태임을 의미한다. 대부분의 응용 소프트웨어(웹 브라우저 포함)에서 초 점을 받은 요소는 다른 요소와 구분할 수 있게 밑줄을 보이게 하거나, 테두리를
 						씌우거나 또는 색을 변경하는 등 시각적으로 구별할 수 있는 기능을 제공한다.
 					</p>
 				</dd>
@@ -1175,7 +1175,7 @@
 				</div>
 				<p>(초점 이동과 표시) 키보드에 의한 초점은 논리적으로 이동해야 하며, 시각적으로 구별할 수 있어야 한다.
 				</p>
-				<p>웹 페이지에서 제공하는 모든 기능을 키보드만으로 사용하는 경우에도 사용자 입력 간의 초점 이동 은 적절한 순서를 따라야 하며, 이 과정에서 콘텐츠는 조작이
+				<p>웹 페이지에서 제공하는 모든 기능을 키보드만으로 사용하는 경우에도 사용자 입력 간의 초점 이동은 적절한 순서를 따라야 하며, 이 과정에서 콘텐츠는 조작이
 					불가능한 상태가 되거나 갑작스러운 페이지의 전환 등이 일어나지 않아야 한다.
 				</p>
 				<p>또한 초점을 받은 콘텐츠는 저시력장애인과 지체장애인이 인지할 수 있도록 시각적으로 구별되어야 한다.
@@ -1224,7 +1224,7 @@
 					<h4 id="x6-1-3-target"><bdi class="secno"> 6.1.3 </bdi>(조작 가능) 사용자 입력 및 콘트롤은 조작 가능하도록 제공되어야 한다.</h4>
 					<a class="self-link" href="#target" aria-label="섹션 고유링크 6.1.3"></a>
 				</div>
-				<p>웹 페이지에서 제공하는 모든 이웃한 콘트롤은 개별적으로 선택하고 사용할 수 있도록 충분한 크기 로 제공해야 한다.
+				<p>웹 페이지에서 제공하는 모든 이웃한 콘트롤은 개별적으로 선택하고 사용할 수 있도록 충분한 크기로 제공해야 한다.
 				</p>
 				<ol>
 					<li>
@@ -1300,7 +1300,7 @@
 					<a class="self-link" href="#timing-adjustable" aria-label="섹션 고유링크 6.2.1"></a>
 				</div>
 				<p>
-					웹 콘텐츠 제작 시 시간제한이 있는 콘텐츠는 가급적 포함하지 않는 것이 바람직하며, 보안 등의 사 유로 시간제한이 반드시 필요할 경우 이를 회피할 수 있는 수단을 제공해야 한다.
+					웹 콘텐츠 제작 시 시간제한이 있는 콘텐츠는 가급적 포함하지 않는 것이 바람직하며, 보안 등의 사유로 시간제한이 반드시 필요할 경우 이를 회피할 수 있는 수단을 제공해야 한다.
 				</p>
 				<ol>
 					<li>
@@ -1376,25 +1376,20 @@
 					<a class="self-link" href="#three-flashes-or-below-threshold" aria-label="섹션 고유링크 6.3.1"></a>
 				</div>
 				<p>깜빡이거나(blinking) 번쩍이는(flashing) 콘텐츠로 인해 발작을 일으키지 않도록 초당
-					3∼50회 주기로 깜빡이거나 번쩍이는 콘텐츠를 제공하지 않아야 한다. 10인치 이상의 스크린을 채용하고 있는 정보통
-					신기기(태블릿 기기, PC 모니터, 무인 안내기 등)에서는 콘텐츠에 의한 광과민성 발작
+					3∼50회 주기로 깜빡이거나 번쩍이는 콘텐츠를 제공하지 않아야 한다. 10인치 이상의 스크린을 채용하고 있는 정보통신기기(태블릿 기기, PC 모니터, 무인 안내기 등)에서는 콘텐츠에 의한 광과민성 발작
 					가능성을 특히 주의해야 한다.
 				</p>
 				<ol>
 					<li>
-						<p>번쩍이는 콘텐츠 사용 금지: 번쩍임이 초당 3~50회이며, 10인치 이상의 화면에 표시된 번쩍이는 콘텐츠가
-							차지하는 면적의 합이 화면 전체 면적의 10%를 넘지 않아야 한다.
+						<p>번쩍이는 콘텐츠 사용 금지: 번쩍임이 초당 3~50회이며, 10인치 이상의 화면에 표시된 번쩍이는 콘텐츠가 차지하는 면적의 합이 화면 전체 면적의 10%를 넘지 않아야 한다.
 						</p>
 					</li>
 					<li>
-						<p>깜빡이는 콘텐츠 사용 금지: 초당 3~50회의 속도로 깜빡거리게 만든 콘텐츠는 그 깜빡임을 정지시킬 수 있어야
-							한다.
+						<p>깜빡이는 콘텐츠 사용 금지: 초당 3~50회의 속도로 깜빡거리게 만든 콘텐츠는 그 깜빡임을 정지시킬 수 있어야 한다.
 						</p>
 					</li>
 					<li>
-						<p>번쩍이는 시간 제한: 웹 페이지에 포함되는 콘텐츠의 번쩍이는 시간을 3초 미만으로 제한하면, 지속적인
-							번쩍임으로 인한 사용자(예: 광과민성 증후 환자, 학습장애인, 저시력장애인
-							등)의 발작을 예방하면서도 콘텐츠의 중요성을 알릴 수 있다.
+						<p>번쩍이는 시간 제한: 웹 페이지에 포함되는 콘텐츠의 번쩍이는 시간을 3초 미만으로 제한하면, 지속적인 번쩍임으로 인한 사용자(예: 광과민성 증후 환자, 학습장애인, 저시력장애인 등)의 발작을 예방하면서도 콘텐츠의 중요성을 알릴 수 있다.
 						</p>
 					</li>
 				</ol>
@@ -2014,8 +2009,8 @@
 				</div>
 				<p>
 					하나의 과정(process) 중 특정 단계(step)에서, 이전 단계에서 사용자가 이미 입력했거나 사용자에게
-					제공되었던 동일한 정보를 반복 입력해야 하는 경우, 반복되는 입력 정보는 자동으로 채워지거나 사 용자가 해당 정보를 선택 입력할 수 있어야 한다.
-					예를 들어, 온라인 구매에서 주문자와 수령자 주소 가 동일한 경우, 이전 단계에서 입력한 주문자 주소를 수령자 주소에 재입력
+					제공되었던 동일한 정보를 반복 입력해야 하는 경우, 반복되는 입력 정보는 자동으로 채워지거나 사용자가 해당 정보를 선택 입력할 수 있어야 한다.
+					예를 들어, 온라인 구매에서 주문자와 수령자 주소가 동일한 경우, 이전 단계에서 입력한 주문자 주소를 수령자 주소에 재입력
 					없이 선택하여 채울 수 있다. 다만, 패스워드와 같이 보안 목적 등으로 재입력이 필수적인 경우는 예외로 간주한다.
 				</p>
 				<p>
@@ -2070,7 +2065,7 @@
 						8.2. 웹 애플리케이션 접근성
 					</td>
 					<td>
-						8.2.1. (웹 애플리케이션 접근성 준수) 콘텐츠에 포함된 웹 애플리케이션 은 접근성이 있어야 한다.
+						8.2.1. (웹 애플리케이션 접근성 준수) 콘텐츠에 포함된 웹 애플리케이션은 접근성이 있어야 한다.
 					</td>
 				</tr>
 			</tbody>
@@ -2848,13 +2843,11 @@
 							</p>
 						</li>
 					</ul>
-					<p>- 글자는 장식적인 목적이거나, 필수적인 경우(로고 등)를 제외하고 이미지 형 태가 아닌 텍스트로
-						제공한다.
+					<p>- 글자는 장식적인 목적이거나, 필수적인 경우(로고 등)를 제외하고 이미지 형태가 아닌 텍스트로 제공한다.
 					</p>
 					<p>예) CSS를 활용하여 시각 효과가 적용된 텍스트 제공
 					</p>
-					<p>※ “1.4.5 텍스트 이미지”는 시각 효과를 사용자에게 맞게 변경할 수 있는 텍 스트 이미지를 예외로 인정하지만,
-						1.4.9는 인정하지 않음
+					<p>※ “1.4.5 텍스트 이미지”는 시각 효과를 사용자에게 맞게 변경할 수 있는 텍스트 이미지를 예외로 인정하지만, 1.4.9는 인정하지 않음
 					</p>
 				</td>
 			</tr>
@@ -2885,7 +2878,7 @@
 			<tr>
 				<td>1.4.11
 				</td>
-				<td>Non-text Contrast 텍스트가 아닌 콘텐 츠의 명도대비
+				<td>Non-text Contrast 텍스트가 아닌 콘텐츠의 명도대비
 				</td>
 				<td>AA
 				</td>
@@ -2898,8 +2891,7 @@
 					</ul>
 					<p>- 텍스트가 아닌 콘텐츠도 명도대비를 3:1 이상으로 제공한다.
 					</p>
-					<p>예) 링크, 버튼, 입력ㆍ체크 박스와 같은 사용자 인터페이스나 내용 이해에 필 요한 그래픽 콘텐츠에 3:1
-						이상의 명도대비 제공
+					<p>예) 링크, 버튼, 입력ㆍ체크 박스와 같은 사용자 인터페이스나 내용 이해에 필요한 그래픽 콘텐츠에 3:1 이상의 명도대비 제공
 					</p>
 					<p>※ 사용할 수 없음을 알리기 위해 낮은 명도로 제공된 사용자 인터페이스는 예외임
 					</p>
@@ -2917,13 +2909,11 @@
 				<td>
 					<ul>
 						<li>
-							<p>사용자가 글자 서식을 자신에게 맞게 변경하였을 때, 글자가 가리거나 겹치거 나 잘려서 콘텐츠를 인식할 수 없게 될 수 있다
+							<p>사용자가 글자 서식을 자신에게 맞게 변경하였을 때, 글자가 가리거나 겹치거나 잘려서 콘텐츠를 인식할 수 없게 될 수 있다
 							</p>
 						</li>
 					</ul>
-					<p>- 글자 서식을 일정수준(줄 간격을 글자 1.5배, 문단 간격을 글자 2배,
-						글자 간 격을 글자 0.12배, 단어 간격을 글자 0.16배)까지 변경해도 콘텐츠의 내용과
-						기능을 유지할 수 있도록 제공한다.
+					<p>- 글자 서식을 일정수준(줄 간격을 글자 1.5배, 문단 간격을 글자 2배, 글자 간격을 글자 0.12배, 단어 간격을 글자 0.16배)까지 변경해도 콘텐츠의 내용과 기능을 유지할 수 있도록 제공한다.
 					</p>
 					<p>예) 화면을 확대했을 때, 글자가 알아보기 가리거나 겹치거나 잘리지 않도록 제공
 					</p>
@@ -2934,20 +2924,18 @@
 				</td>
 				<td>Content on Hover or Focus
 				</p>
-				<p>호버 또는 초점을 받 은 콘텐츠
+				<p>호버 또는 초점을 받은 콘텐츠
 				</td>
 				<td>AA
 				</td>
 				<td>
 					<ul>
 						<li>
-							<p>마우스 포인터를 위에 올리는 호버(Hover) 또는 초점으로 나타나거나 사라지 는 콘텐츠는 정밀한 동작이 어려운 사용자가 사용하기 곤란할 수
-								있다.
+							<p>마우스 포인터를 위에 올리는 호버(Hover) 또는 초점으로 나타나거나 사라지는 콘텐츠는 정밀한 동작이 어려운 사용자가 사용하기 곤란할 수 있다.
 							</p>
 						</li>
 					</ul>
-					<p>- 마우스 호버 또는 초점에 의해 나타난 콘텐츠는 닫을 수 있고, 마우스를 올려 서 사용할 수 있고, 호버나 초점을 유지하는 동안
-						사라지지 않아야 한다.
+					<p>- 마우스 호버 또는 초점에 의해 나타난 콘텐츠는 닫을 수 있고, 마우스를 올려서 사용할 수 있고, 호버나 초점을 유지하는 동안 사라지지 않아야 한다.
 					</p>
 					<p>예) 마우스 호버로 나타난 콘텐츠를 ESC키 등을 이용하여 닫을 수 있게 구현
 					</p>
@@ -2992,8 +2980,7 @@
 							</p>
 						</li>
 					</ul>
-					<p>- 키보드가 특정 부분에서 함정(Trap)에 빠지지 않도록 하고, 특별한 키 사용이 필요한 콘텐츠인 경우 그 사용법을 미리
-						알려준다.
+					<p>- 키보드가 특정 부분에서 함정(Trap)에 빠지지 않도록 하고, 특별한 키 사용이 필요한 콘텐츠인 경우 그 사용법을 미리 알려준다.
 					</p>
 					<p>예) 글쓰기 편집창 안에 들어온 초점을 편집창 밖으로 보내기 위한 단축키를 제공하고 관련 정보를 인지할 수 있도록 명시
 					</p>
@@ -3064,7 +3051,7 @@
 					</p>
 					<p>예) 일정 시간 사용하지 않으면 로그아웃되는 콘텐츠의 경우, 시간 연장 여부를  사용자에게 미리 질의
 					</p>
-					<p>※ 경매와 같은 실시간 콘텐츠, 티켓 구매와 같은 시간제한이 필수적인 콘텐 츠, 시간제한이 20시간 이상인 경우는 예외
+					<p>※ 경매와 같은 실시간 콘텐츠, 티켓 구매와 같은 시간제한이 필수적인 콘텐츠, 시간제한이 20시간 이상인 경우는 예외
 					</p>
 				</td>
 			</tr>
@@ -3078,7 +3065,7 @@
 				<td>
 					<ul>
 						<li>
-							<p>움직이거나 깜빡이거나 자동 갱신되는 부분이 있는 콘텐츠는 사용자의 콘텐 츠 사용을 어렵게 할 수 있다.
+							<p>움직이거나 깜빡이거나 자동 갱신되는 부분이 있는 콘텐츠는 사용자의 콘텐츠 사용을 어렵게 할 수 있다.
 							</p>
 						</li>
 					</ul>
@@ -3143,7 +3130,7 @@
 				</ul>
 				<p>- 긴급상황이 아닌 경우, 사용자가 인터럽트(interruptions)를 지연시키거나 통제 할 수 있어야 한다.
 				</p>
-				<p>예) 갱신이나 알림 등을 현재 작업이 끝난 이후 받거나, 받지 않도록 설정 가 능하게 기능 제공
+				<p>예) 갱신이나 알림 등을 현재 작업이 끝난 이후 받거나, 받지 않도록 설정 가능하게 기능 제공
 				</p>
 			</td>
 		</tr>
@@ -3319,7 +3306,7 @@
 			<td>
 				<ul>
 					<li>
-						<p>초점 순서가 콘텐츠의 의미와 맞지 않으면, 키보드 사용자는 콘텐츠를 사용하 는 데 혼란을 겪을 수 있다.
+						<p>초점 순서가 콘텐츠의 의미와 맞지 않으면, 키보드 사용자는 콘텐츠를 사용하는 데 혼란을 겪을 수 있다.
 						</p>
 					</li>
 				</ul>
@@ -3390,7 +3377,7 @@
 			<td>
 				<ul>
 					<li>
-						<p>콘텐츠를 이해하는 데 도움이 되는 제목과 레이블이 적절하지 않다면, 사용자 는 콘텐츠를 이해하기 어려울 수 있다.
+						<p>콘텐츠를 이해하는 데 도움이 되는 제목과 레이블이 적절하지 않다면, 사용자는 콘텐츠를 이해하기 어려울 수 있다.
 						</p>
 					</li>
 				</ul>
@@ -3398,7 +3385,7 @@
 				</p>
 				<p>예) 뉴스 사이트 기사의 제목은 기사 내용을 충분히 대표할 수 있도록 제공
 				</p>
-				<p>※ 제목과 레이블의 제공 여부 및 적절한 구현(코딩) 여부는 해당 지침의 평 가 범위가 아님. 제공된 경우,
+				<p>※ 제목과 레이블의 제공 여부 및 적절한 구현(코딩) 여부는 해당 지침의 평가 범위가 아님. 제공된 경우,
 					적절성에 대해서만 평가
 				</p>
 				<p>※ 적절한 코딩인지 여부는 “1.3.1 정보 및 관계”에서 평가
@@ -3644,11 +3631,9 @@
 			</p>
 			<p>※ 44 CSS 픽셀은 약 1.16cm임(W3C reference pixel 참조)
 			</p>
-			<p>※ 페이지 내 충분한 크기의 대체 기능이 있거나, 텍스트의 일부이거나, 작 성자가 변경할 수 없는 사용자 에이전트에 의해 결정되는
-				부분, 필수적 인 경우는 예외
+			<p>※ 페이지 내 충분한 크기의 대체 기능이 있거나, 텍스트의 일부이거나, 작 성자가 변경할 수  없는 사용자 에이전트에 의해 결정되는 부분, 필수적인 경우는 예외
 			</p>
-			<p>※ 스마트폰 쿼티(qwerty) 자판의 경우, 각 버튼의 크기가 충분하지는 않지 만, 사용자 에이전트가 제공하는 기능으로
-				예외
+			<p>※ 스마트폰 쿼티(qwerty) 자판의 경우, 각 버튼의 크기가 충분하지는 않지만, 사용자 에이전트가 제공하는 기능으로 예외
 			</p>
 		</td>
 	</tr>
@@ -3826,11 +3811,11 @@
 		<td>
 			<ul>
 				<li data-list-text="o">
-					<p>사용자의 의도와 상관없이 단순히 초점을 받는 것으로 문맥이 변경된다면, 사 용자는 혼란에 빠지기 쉽다.
+					<p>사용자의 의도와 상관없이 단순히 초점을 받는 것으로 문맥이 변경된다면, 사용자는 혼란에 빠지기 쉽다.
 					</p>
 				</li>
 			</ul>
-			<p>- 문맥이 단순히 초점을 받는 것만으로 변경되지 않고 사용자가 의도한 경우에 만 변경되도록 한다.
+			<p>- 문맥이 단순히 초점을 받는 것만으로 변경되지 않고 사용자가 의도한 경우에만 변경되도록 한다.
 			</p>
 			<p>예) 관련 사이트로 이동하는 드롭다운 메뉴에 확인 버튼을 제공하여, 초점만 으로 페이지 이동이 발생하지 않고,
 				“확인” 버튼 선택 후 이동
@@ -3849,13 +3834,13 @@
 		<td>
 			<ul>
 				<li data-list-text="o">
-					<p>사용자의 의도와 상관없이 단순히 입력을 받는 것으로 문맥이 변경된다면, 사 용자는 혼란에 빠지기 쉽다.
+					<p>사용자의 의도와 상관없이 단순히 입력을 받는 것으로 문맥이 변경된다면, 사용자는 혼란에 빠지기 쉽다.
 					</p>
 				</li>
 			</ul>
 			<p>- 문맥이 단순히 입력받는 것만으로 변경되지 않고 사용자가 의도한 경우에만 변경되도록 한다.
 			</p>
-			<p>예) 입력 양식의 모든 값이 입력되었을 때, 입력 양식이 자동으로 제출되는 것 이 아니라, “확인”
+			<p>예) 입력 양식의 모든 값이 입력되었을 때, 입력 양식이 자동으로 제출되는 것이 아니라, “확인”
 				버튼 등으로 사용자가 제출 의도를 명확히 한 경우에 제 출
 			</p>
 		</td>
@@ -3872,11 +3857,11 @@
 		<td>
 			<ul>
 				<li data-list-text="o">
-					<p>대메뉴와 같은 내비게이션 순서가 일관성 없이 제공된다면, 사용자는 내비게 이션하는 데 어려움을 겪을 수 있다.
+					<p>대메뉴와 같은 내비게이션 순서가 일관성 없이 제공된다면, 사용자는 내비게이션하는 데 어려움을 겪을 수 있다.
 					</p>
 				</li>
 			</ul>
-			<p>- 대메뉴, 검색, 건너뛰기 링크 등 페이지를 이동하는 내비게이션이 동일한 순 서로 일관성 있게 제공한다.
+			<p>- 대메뉴, 검색, 건너뛰기 링크 등 페이지를 이동하는 내비게이션이 동일한 순서로 일관성 있게 제공한다.
 			</p>
 			<p>예) 바로가기, 검색, 대메뉴 등을 모든 페이지에서 동일한 순서로 제공
 			</p>
@@ -3892,12 +3877,11 @@
 		<td>
 			<ul>
 				<li data-list-text="o">
-					<p>동일한 기능을 하는 아이콘, 버튼 등이 일관성 없이 제공되면, 사용자는 해당 아이콘, 버튼 등을 사용하는 데
-						어려움을 겪을 수 있다.
+					<p>동일한 기능을 하는 아이콘, 버튼 등이 일관성 없이 제공되면, 사용자는 해당 아이콘, 버튼 등을 사용하는 데 어려움을 겪을 수 있다.
 					</p>
 				</li>
 			</ul>
-			<p>- 동일한 기능을 하는 아이콘, 버튼 등을 일관된 식별이 가능하도록 동일한 형 태로 제공한다.
+			<p>- 동일한 기능을 하는 아이콘, 버튼 등을 일관된 식별이 가능하도록 동일한 형태로 제공한다.
 			</p>
 			<p>예) 검색기능 버튼의 라벨을 “찾기” 또는 “검색” 등으로 혼용하여 사용하지
 				않 고, 하나의 라벨로 통일하여 사용
@@ -3926,7 +3910,7 @@
 					</p>
 				</li>
 			</ul>
-			<p>예) 관련 사이트로 이동하는 드롭다운 메뉴에 확인 버튼을 제공하여, 사용자 의 명확한 요구 수용
+			<p>예) 관련 사이트로 이동하는 드롭다운 메뉴에 확인 버튼을 제공하여, 사용자의 명확한 요구 수용
 			</p>
 		</td>
 	</tr>
@@ -4303,7 +4287,7 @@
 	<h4>국내 표준</h4>
 	<p>해당 사항 없음.</p>
 	<h3>참조 표준(권고)과의 비교</h3>
-	<p>이 표준은 W3C가 장애인 등이 웹사이트에 접근하는 것을 보장하기 위한 목적으로 개발한 '웹 콘텐 츠 접근성 지침 2.1'를
+	<p>이 표준은 W3C가 장애인 등이 웹사이트에 접근하는 것을 보장하기 위한 목적으로 개발한 '웹 콘텐츠 접근성 지침 2.1'를
 		참고하여 개발되었다. W3C의 웹 접근성 표준은 1999년 5월에 제정되었으며, 2008년,
 		2018년에 개정된 바 있다. 이 표준은 ‘W3C 웹 콘텐츠 접근성 가이드라인 2.1(2018)’의 성공 기준의
 		중요도 A항목을 중심으로 국내 여건을 고려하여 개발하였다.
