--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>한국형 웹 콘텐츠 접근성 지침 2.2</title>
+	<title>한국형 웹 콘텐츠 접근성 지침(KWCAG) 2.2</title>
 	<link rel="stylesheet" type="text/css" href="./resources/embed.css">
 	<link rel="stylesheet" type="text/css" href="./resources/guidelines.css">
 	<!-- <link rel="stylesheet" type="text/css" href="./resources/formats.css"> -->
@@ -13,7 +13,7 @@
 </head>
 <body class="h-entry informative">
 	<div class="head">
-		<h1 id="title" class="title">한국형 웹 콘텐츠 접근성 지침(WCAG) 2.2</h1>
+		<h1 id="title" class="title">한국형 웹 콘텐츠 접근성 지침(KWCAG) 2.2</h1>
 		<p id="w3c-state">방송통신표준 KS X OT000.
 		</p>
 		<details open="">
