fix typo in note section of index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<div class="note">
 			<div role="heading" class="note-title marker" id="h-note-0" aria-level="2"><span>온라인판 관련 참고 사항</span></div>
 			<ul>
-				<li>이 문서는 공식 문서가 아니며, 원문 참조를 쉽게 만드릭 위해 HTML판으로 변환하여 게시한 것입니다.</li>
+				<li>이 문서는 공식 문서가 아니며, 원문 참조를 쉽게 만들기 위해 HTML판으로 변환하여 게시한 것입니다.</li>
 				<li>원문의 내용을 변경하지는 않았으나, 보다 읽기 쉽도록 순서를 일부 변경하였습니다.</li>
 				<li>번호 표기 방식 등을 일원화하였습니다.</li>
 				<li>오류 신고 및 편집 참여 등의 의견은 <a href="https://github.com/a11ykr/kwcag22">Github 저장소</a>에 남겨주시기 바랍니다.(github 계정 필요)</li>
