--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 		<p>
 			이 표준은 원칙, 지침, 검사항목의 3단계로 구성되어 있다. 본 표준을 준수할 경우, 장애인, 고령자 등이 비장애인, 젊은이 등과 동등하게 웹사이트에서 제공하는 콘텐츠를 인식하고, 이를 운영하고 이 해할 수 있다. 물론 본 표준을 모두 준수한 경우에도 학력, 장애 유형과 정도(장애의 중복 또는 장애 의 경중 등), 컴퓨터 및 인터넷 사용 경험, 보조기술 이용 능력 등에 따라 웹 콘텐츠에 대한 접근이 불가능한 경우가 발생할 수도 있다. 그렇기 때문에 장애인 및 고령자 등을 대상으로 하는 정보화 교 육이 필요하며, 장애인에게는 맞춤형 보조기술을 제공할 필요가 있다. 다만, 이 표준을 준수하여 웹 콘텐츠를 제작하는 경우, 단일 장애를 지닌 사용자에게 필요한 대부분의 웹 접근성과 관련된 문제를 해결할 수 있을 것이다.
 		</p>
-		<table class="counts" summary="한국형 웹 콘텐츠 접근성 지침 2.2의 원칙, 지침, 검사항목 수">
+		<table class="counts">
 			<caption>표 1 — 한국형 웹 콘텐츠 접근성 지침 2.2 개요</caption>
 			<thead>
 				<tr>
@@ -303,7 +303,7 @@
 		<p>
 			인식의 용이성은 사용자가 장애 유무 등에 관계없이 웹사이트에서 제공하는 모든 콘텐츠를 동등하게 인식할 수 있도록 제공하는 것을 의미한다. 인식의 용이성은 대체 텍스트, 멀티미디어 대체수단, 적응성, 명료성의 4가지 지침으로 구성되어 있다.
 		</p>
-		<table class="criteria" summary="인식의 용이성 지침과 검사항목">
+		<table class="criteria">
 			<caption>표 2 — 인식의 용이성 관련 지침 및 검사항목</caption>
 			<thead>
 				<tr>
@@ -1800,7 +1800,7 @@
 			</div>
 			<section id="glossary">
 				<div class="header-wrapper">
-					<h3 id="x6-glossary"><bdi class="secno">1. </bdi>용어 정의</h3>
+					<h3 id="x7-glossary"><bdi class="secno">1. </bdi>용어 정의</h3>
 					<a class="self-link" href="#glossary" aria-label="섹션 고유링크"></a>
 				</div>
 				<p>이 표준의 목적을 위하여 다음의 용어와 정의를 적용한다.
@@ -1894,7 +1894,7 @@
 								원래 항목 A, C, D, E에서 B항목을 추가한 경우 → A, B, C, D, .
 							</p>
 						</aside>
-						<aside class="example" id="example-3">
+						<aside class="example" id="example-4">
 							<div class="marker">예 2</div>
 							<p>
 								원래 항목 A, C, D, E에서 C항목을 제거한 경우 → A, D, .
@@ -2184,9 +2184,9 @@
 			</section>
 			<section id="definition">
 				<div class="header-wrapper">
-					<h3 id="x6-glossary"><bdi class="secno">2. </bdi>정의</h3>
+					<h3 id="x6-definition"><bdi class="secno">2. </bdi>정의</h3>
 					<a class="self-link" href="#glossary" aria-label="섹션 고유링크"></a>
-				</div>
+				</div>definition
 				<p>해당 사항 없음.
 				</p>
 			</section>
